infrastructure/k8s/playground-yamls/my_consul.yaml
apiVersion: v1
kind: Pod
metadata:
  name: consul-example
  namespace: kandula
spec:
  containers:
    - name: example
      image: 'consul:latest'
      command:
        - '/bin/sh'
        - '-ec'
        - |
          export CONSUL_HTTP_ADDR="${HOST_IP}:8500"
          consul kv put hello world
  restartPolicy: Never
