infrastructure/k8s/playground-yamls/my_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: my-pod
  annotations:
      consul.hashicorp.com/connect-inject: "true"
  name: my-pod2
  namespace: kandula
spec:
  serviceAccountName: kandula-sa
  containers:
  - image: nginx
    name: my-pod
    ports:
    - containerPort: 80
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
