infrastructure/k8s/playground-yamls/kandula-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kandula-deployment
  namespace: kandula
  labels:
    app: kandula-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kandula-app
  template:
    metadata:
      labels:
        app: kandula-app
    spec:
      serviceAccountName: opsschool-sa
      containers:
      - name: kandula
        image: lirondadon/kandula:1.0.0
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3


---
apiVersion: v1
kind: Service
metadata:
  name: kandula-svc
  namespace: kandula
  labels:
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: kandula-app
