infrastructure/k8s/playground-yamls/kandula-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kandula-ingress
  namespace: kandula
spec:
  ingressClassName: nginx
  rules:
  - host: kandula.lirondadon.link
    http:
      paths:
      - backend:
          service:
            name: kandula-svc
            port:
              number: 5000
        path: /
        pathType: Prefix
